--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -3,6 +3,7 @@
 </div>
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= f.error_notification %>
+  <%= resource.errors.full_messages %>
   <div class="form-inputs user-edit-form-inputs">
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
       <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
@@ -16,6 +17,7 @@
                   hint: "This is the postal code your home page will default to." %>
       <%= f.input :region,
                   hint: "You can leave this blank if you're in the United States" %>
+      <%= f.time_zone_select(:time_zone, ActiveSupport::TimeZone.us_zones) %>
       <div class="user-password-change">
         <%= f.input :password,
                 hint: "Leave it blank if you don't want to change your password.",
