--- a/app/assets/stylesheets/opportunities.scss
+++ b/app/assets/stylesheets/opportunities.scss
@@ -337,6 +337,8 @@
   font-size: 1.3em;
   padding-top: 3vh;
   border-top: 1px solid $lightgrey;
+  padding-left: 2vw;
+  padding-right: 2vw;
 
   @include respond-to(handhelds) {
     margin-left: 2vw;
