a little more cleanup

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -311,7 +311,7 @@
   padding: 1em;
 }
 
-.no-open-opportunities {
+.no-open-opportunities, .no-active-opportunities {
   padding-top: 5vh;
   padding-left: 10vw;
   padding-right: 10vw;
