update donate page a little bit

--- a/app/views/pages/donate.html.erb
+++ b/app/views/pages/donate.html.erb
@@ -2,8 +2,11 @@
   <div class="jbh-standard-title">
     Interested in donating or helping us come to market?
   </div>
+  <div class="donation-explanation">
+    Just Be Human is a 501c3 non-profit that is entirely donation funded. We do not run ads and we do not use ANY information collected on the platform for commercial purposes. If you're excited about what we're doing and want to help, you can donate using the wiget below. You can also scroll down and find a form for entering your email if you're interested in being involved with helping us grow!
+  </div>
   <div class="donation-widget">
-    <iframe frameborder = "0" height="100%" scrolling="yes"  src = "https://give.donatekindly.org/jb701/makedonation/donation/d6efeb1e-5dd3-4f04-bbe5-51890ba2eddb"  class="donation-frame"></iframe>
+    <iframe frameborder = "0" height="100%" scrolling="yes"  src="https://give.donatekindly.org/jb701/makedonation/donation/d6efeb1e-5dd3-4f04-bbe5-51890ba2eddb"  class="donation-frame"></iframe>
   </div>
   <%= render 'donationform', donation: @donation %>
   <div class="signup-disclaimer">
