--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -402,6 +402,19 @@
 // ========DONATE PAGE STYLING========
 
 
+.donation-explanation {
+  margin-left: 15vw;
+  margin-right: 15vw;
+  font-size: 1.3rem;
+  text-align: center;
+
+  @include respond-to(handhelds) {
+    margin-left: 5vw;
+    margin-right: 5vw;
+    font-size: 1rem;
+  }
+}
+
 .donation-info-container {
   display: flex;
   flex-direction: column;
