--- a/app/views/opportunities/followers.html.erb
+++ b/app/views/opportunities/followers.html.erb
@@ -28,7 +28,7 @@
                     <%= link_to 'Demote', controller: "opportunities", action: "demote_user", opportunity_id: @opportunity.id, target_user_id: role.user.id, class: "demote-user-btn follower-action-btn dropdown-item" %>
                   <% end %>
                 <% end %>
-                <% if @is_volunteer && role.level <= 3 && current_user != role.user %>
+                <% if @is_follower && current_user != role.user %>
                   <%= link_to 'Send a message', new_personal_message_path(receiver_id: role.user), class: "follower-action-btn dropdown-item" %>
                 <% end %>
               </div>
