--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -64,7 +64,9 @@
 <script>
   let map;
   
-  function initMap(){
+  
+  function initMap()
+  {
     map = new google.maps.Map(document.getElementById('map'), {
       center: {lat: <%= @geopoint.latitude %>, lng: <%= @geopoint.longitude %>},
       zoom: 14,
