alrighty, I think the notification mailer should be done

--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -7,7 +7,7 @@
     </style>
   </head>
   <body>
-    <%= image_tag("beta-logo.png", class: "navbar-logo", id: "home-step1") %>
+    <%= image_tag("beta-logo.png", class: "navbar-logo", id: "home-step1", height: "auto", width: "30%") %>
     <%= yield %>
   </body>
 </html>
