--- a/app/assets/stylesheets/theme.scss
+++ b/app/assets/stylesheets/theme.scss
@@ -11,8 +11,8 @@ $dark: #1E2326;
 $limegreen: #99cc66;
 $limegreen-low: rgba(153,204,102,.3);
 $limegreen-mid: rgba(153,204,102,.6);
-$darkblue: #006699;
-$lightblue: #99ccff;
+
+
 $lightpink: #E9B1E0;
 $lightpink-low: rgba(233,177,224,.3);
 $lightpink-mid: rgba(233,177,224,.6);
@@ -20,3 +20,13 @@ $lightpink-mid: rgba(233,177,224,.6);
 $lightgrey: #e0e0e0;
 $midgrey: #959CA0;
 $darkgrey: #666666;
+
+
+$orange: #FFC609;
+$yellow: #F5EA61;
+
+
+
+$darkblue: #004985;
+$midblue: #3CB4E5;
+$lightblue: #96DAEA;
