re-add username restrictions

--- a/app/views/notification_mailer/notification_email.html.erb
+++ b/app/views/notification_mailer/notification_email.html.erb
@@ -65,7 +65,7 @@
         <div class="email-item"> <%= n.stringify %> </div>
       <% end %>
     <% else %>
-      <div class="no-notifications">You have no new notifications at this time.</div>
+      <div class="no-notifications">No opportunity changes to report!</div>
     <% end %>
     <div class="jbh-greeting">
       Thanks again for volunteering with Just Be Human! We're really excited to have you. If you want to be kept in the loop with updates to the platform, bug reports, and common questions, come by the Just Be Human subreddit <a href='https://reddit.com/r/justbehuman'>here!</a>
