--- a/app/views/personal_messages/new.html.erb
+++ b/app/views/personal_messages/new.html.erb
@@ -1,10 +1,7 @@
-<h1>New message to <%= @receiver.username %></h1>
-
+<div class="jbh-standard-title">New message to <%= @receiver.username %></div>
 <%= form_for @personal_message do |f| %>
   <%= hidden_field_tag 'receiver_id', @receiver.id %>
-
   <%= f.label :body %>
   <%= f.text_area :body %>
-
   <%= f.submit %>
 <% end %>
