working on oppo#show redesign

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -7,7 +7,7 @@
       <!-- Grid column -->
       <div class="col-md-8 mt-md-0 mt-3">
         <!-- Content -->
-        <h5 class="text-uppercase">Just Be Human v1.1.4beta</h5>
+        <h5 class="text-uppercase">Just Be Human v1.1.5beta</h5>
         <p>Just Be Human is run by a 501(c)3 non-profit and is principally donation-funded. If you're interested in helping us grow, please check out these links!</p>
       </div>
       <!-- Grid column -->
@@ -31,7 +31,7 @@
   </div>
   <!-- Footer Links -->
   <!-- Copyright -->
-  <div class="footer-copyright text-center py-3">© <%= Date.today.strftime('%Y') %> Copyright: Just Being Human</div>
+  <div class="footer-copyright text-center py-3">© <%= Date.today.strftime('%Y') %> - Just Being Human</div>
   <!-- Copyright -->
 </footer>
 <!-- Footer -->
