--- a/app/assets/stylesheets/opportunities.scss
+++ b/app/assets/stylesheets/opportunities.scss
@@ -20,6 +20,129 @@
   }
 }
 
+
+.opportunity-main-grid {
+	display: grid;
+	grid-template-columns: 50% 50%;
+	grid-template-rows: 2;
+
+
+	@include respond-to(handhelds) {
+		grid-template-columns: 100%;
+		grid-template-rows: 4;
+	}
+}
+
+.oppo-main-grid-topleft {
+	grid-row: 1;
+	grid-column: 1;
+
+	border: 1px solid red;
+
+	.oppo-topleft-grid {
+		display: grid;
+		height: 100%;
+		grid-template-rows: 50% 50%;
+		grid-template-columns: 1;
+
+
+		.oppo-topleft-grid-top {
+			grid-row: 1;
+		}
+
+		.oppo-topleft-grid-bottom {
+			grid-row: 2;
+		}
+	}
+
+
+
+
+}
+
+.oppo-main-grid-topright {
+	grid-row: 1;
+	grid-column: 2;
+
+	border: 1px solid yellow;
+
+	@include respond-to(handhelds) {
+		grid-row: 2;
+		grid-column: 1;
+	}
+
+	.posts-container-header {
+		font-size: 1.8rem;
+		text-transform: uppercase;
+		color: $darkgrey;
+		font-weight: 600;
+		display: flex;
+		justify-content: space-between;
+		padding-left: 2vw;
+		padding-right: 2vw;
+
+		@include respond-to(handhelds) {
+			padding-top: 1vh;
+			font-size: 1.4rem;
+		}
+
+		.add-post-btn {
+			font-size: 1.8rem !important;
+			color: $limegreen !important;
+			font-weight: 600;
+
+			@include respond-to(handhelds) {
+				font-size: 1.4rem !important;
+			}
+		}
+	}
+
+	.post-list {
+		max-height: 30vh;
+		overflow-y: scroll;
+	}
+
+	.post-title {
+	  color: black;
+	  letter-spacing: 2px;
+	  margin: 0;
+	  font-size: 1.5rem;
+	  padding-left: 1vw;
+	  @include respond-to(handhelds){
+	    font-size: 1rem;
+	  };
+	}
+
+	.post-listitem {
+		border-bottom: 1px solid $lightgrey;
+	}
+}
+
+.oppo-main-grid-bottomleft {
+	grid-row: 2;
+	grid-column: 1;
+
+	border: 1px solid green;
+
+	@include respond-to(handhelds) {
+		grid-row: 3;
+		grid-column: 1;
+	}
+}
+
+.oppo-main-grid-bottomright {
+	grid-row: 2;
+	grid-column: 2;
+
+
+	border: 1px solid blue;
+
+	@include respond-to(handhelds) {
+		grid-row: 4;
+		grid-column: 1;
+	}
+}
+
 .opportunity-title {
   text-transform: none;
   font-weight: 700;
