--- a/app/assets/stylesheets/opportunities.scss
+++ b/app/assets/stylesheets/opportunities.scss
@@ -37,8 +37,6 @@
 	grid-row: 1;
 	grid-column: 1;
 
-	border: 1px solid red;
-
 	.oppo-topleft-grid {
 		display: grid;
 		height: 100%;
@@ -55,6 +53,9 @@
 
 		.oppo-topleft-grid-right {
 			grid-column: 2;
+			display: flex;
+			flex-direction: column;
+			justify-content: space-between;
 		}
 
 		.oppo-topleft-grid-top {
@@ -68,16 +69,39 @@
 		}
 	}
 
+	.opportunity-info-row {
+		padding-left: 1vw;
+	}
+
+	.dropdown-item {
+		width: 100%;
+		font-size: 1.8rem;
+		font-weight: 500;
+		border-bottom: 1px solid $lightgrey;
+
+		@include respond-to(handhelds) {
+			font-size: 1.3rem;
+		}
+	}
 
 
+	.oppo-options-btn, .follow-btn {
+		width: 100%;
+		background-color: $limegreen-low;
+		border: 1px solid $midgrey;
+		font-size: 1.8rem;
+		font-weight: 600;
+
+		@include respond-to(handhelds) {
+			font-size: 1.3rem;
+		}
+	}
 
 }
 
 .oppo-main-grid-topright {
 	grid-row: 1;
 	grid-column: 2;
-
-	border: 1px solid yellow;
 
 	@include respond-to(handhelds) {
 		grid-row: 2;
@@ -93,6 +117,7 @@
 		justify-content: space-between;
 		padding-left: 2vw;
 		padding-right: 2vw;
+		padding-top: 2vh;
 
 		@include respond-to(handhelds) {
 			padding-top: 1vh;
@@ -892,8 +917,9 @@
 
 .rsvp-form {
   border: 2px solid $limegreen;
-  margin: 5px;
   padding: 3px;
+  margin-left: 2px;
+  margin-right: 2px;
   font-size: 1.2rem;
   @include respond-to(handhelds) {
     padding-top: 2vh;
