--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -7,7 +7,7 @@
       <!-- Grid column -->
       <div class="col-md-8 mt-md-0 mt-3">
         <!-- Content -->
-        <h5 class="text-uppercase">Just Be Human v1.1.5beta</h5>
+        <h5 class="text-uppercase">Just Be Human v1.2.0-beta</h5>
         <p>Just Be Human is run by a 501(c)3 non-profit and is principally donation-funded. If you're interested in helping us grow, please check out these links!</p>
       </div>
       <!-- Grid column -->
