--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -8,11 +8,7 @@
     <%= f.rich_text_area :content, placeholder: "Write your post here" %>
   </div>
   <% if params[:opportunity] %>
-    <%= f.hidden_field :postable_id, :value => params[:opportunity][:id] %>
-    <%= f.hidden_field :postable_type, :value => 'Opportunity' %>
-  <% elsif params[:requirement] %>
-    <%= f.hidden_field :postable_id, :value => params[:requirement][:id] %>
-    <%= f.hidden_field :postable_type, :value => 'Requirement' %>
+    <%= f.hidden_field :opportunity_id, :value => params[:opportunity][:id] %>
   <% end %>
   <div class="submit-post-container">
     <%= f.button :submit, "Post", class: "submit-post-btn"%>
