--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -44,7 +44,7 @@
     </a>
   </div>
   <div class="post-options-container">
-    <% oppo = @post.postable_type == "Opportunity" ? @parent : @parent.opportunity %>
+    <% oppo = @post.opportunity %>
     <% if current_user.is_mod?(oppo.id) || current_user == @post.user %>
       <div class="edit-post-btn-container">
         <a href="<%= @post.id %>/edit" class="edit-post-btn">Edit</a>
@@ -54,11 +54,7 @@
       </div>
     <% end %>
     <div class="parent-return-btn-container">
-      <% if @post.postable_type == "Opportunity" %>
-        <a href="/opportunities/<%= @post.postable_id %>">Return</a>
-      <% else %>
-        <a href="/requirements/<%= @post.postable_id %>">Return</a>
-      <% end %>
+      <a href="/opportunities/<%= @post.opportunity_id %>">Return</a>
     </div>
   </div>
 </div>
