--- a/app/views/opportunities/show.html.erb
+++ b/app/views/opportunities/show.html.erb
@@ -71,7 +71,7 @@
         <div class="posts-container-header">
           <span class="posts-container-title">Posts</span>
           <% if current_user && @role %>
-            <%= link_to 'Add A Post', new_post_path(:opportunity => {:id => @opportunity.id}), class: "add-post-btn"%>
+            <%= link_to 'New', new_post_path(:opportunity => {:id => @opportunity.id}), class: "add-post-btn"%>
           <% end %>
         </div>
         <div class="post-list">
@@ -98,24 +98,19 @@
         <div class="requirements-container-header">
           <span class="requirements-container-title">Requirements</span>
           <% if current_user&.is_mod?(@opportunity.id) %>
-            <%= link_to 'Add A Requirement', new_requirement_path(:opportunity => {:id => @opportunity.id}), class: "add-post-btn"%>
-          <% end %>
-          <% @requirements.each do |requirement| %>
-            <div class="requirement-title"><%= requirement.title %></div>
-          <%end%>
-          <% if @is_mod %>
-            <div class="add-tabitem-button">
-              <%= link_to 'New Requirement', new_requirement_path(:requirement => {:opportunity_id => @opportunity.id, :defined => @opportunity.defined, :target_date => @opportunity.defined ? @opportunity.target_completion_date : @opportunity.planned_by_date }), class: 'btn btn-success btn-lg add-tabitem-btn' %>
-            </div>
+            <%= link_to 'New', new_requirement_path(:requirement => {:opportunity_id => @opportunity.id, :defined => @opportunity.defined, :target_date => @opportunity.defined ? @opportunity.target_completion_date : @opportunity.planned_by_date }), class: 'add-req-btn' %>
           <% end %>
         </div>
+        <% @requirements.each do |requirement| %>
+          <div class="requirement-title"><%= requirement.title %></div>
+        <%end%>
       </div>
     </div>
     <div class="oppo-main-grid-bottomright">
       <div class="opportunity-address-below-map">
         <%= @opportunity.address %>
       </div>
-      <img src="https://maps.googleapis.com/maps/api/staticmap?center=<%= @opportunity.latitude%>,<%= @opportunity.longitude %>&zoom=14&size=340x340&key=AIzaSyDvo5jgtwJAlgCwAA9_5v_pUgphXxe9ntY&markers=color:blue%7Clabel:O%7C<%= @opportunity.latitude%>,<%= @opportunity.longitude%>" class="opportunity-mapimage">
+      <img src="https://maps.googleapis.com/maps/api/staticmap?center=<%= @opportunity.latitude%>,<%= @opportunity.longitude %>&zoom=14&size=300x300&key=AIzaSyDvo5jgtwJAlgCwAA9_5v_pUgphXxe9ntY&markers=color:blue%7Clabel:O%7C<%= @opportunity.latitude%>,<%= @opportunity.longitude%>" class="opportunity-mapimage">
     </div>
   </div>
 </div>
