--- a/app/views/opportunities/show.html.erb
+++ b/app/views/opportunities/show.html.erb
@@ -102,7 +102,18 @@
           <% end %>
         </div>
         <% @requirements.each do |requirement| %>
-          <div class="requirement-title"><%= requirement.title %></div>
+          <div class="requirement-row">
+            <span class="requirement-row-title"><%= requirement.title %></span>
+            <span class="requirement-row-status">
+              <% if requirement.user && requirement.user != current_user %>
+                <%= requirement.user.username %>
+              <% elsif requirement.user && requirement.user == current_user %>
+                <a href="/requirements/cancel?id=<%=requirement.id%>" class="requirement-btn">Cancel</a>
+              <% elsif !requirement.user && @role %>
+                <a href="/requirements/participate?id=<%= requirement.id %>" class="requirement-btn">Volunteer</a>
+              <% end %>
+            </span>
+          </div>
         <%end%>
       </div>
     </div>
