--- a/app/assets/stylesheets/opportunities.scss
+++ b/app/assets/stylesheets/opportunities.scss
@@ -126,8 +126,13 @@
 
 		.add-post-btn {
 			font-size: 1.8rem !important;
-			color: $limegreen !important;
+			color: $orange !important;
+      padding-left: 3px;
+      padding-right: 3px;
 			font-weight: 600;
+      border: 1px solid $orange;
+      background-color: $darkgrey;
+      border-radius: 5px;
 
 			@include respond-to(handhelds) {
 				font-size: 1.4rem !important;
@@ -187,7 +192,7 @@
 
 		.add-req-btn {
 			font-size: 1.8rem !important;
-			color: $limegreen !important;
+			color: $orange !important;
 			font-weight: 600;
 
 			@include respond-to(handhelds) {
@@ -277,33 +282,27 @@
 
 .requirement-row {
   margin-bottom: 2px;
+  margin-left: 1vw;
+  margin-right: 1vw;
   padding: 2vh;
-  border: 1px solid $lightgrey;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  border: 1px solid $orange;
   border-radius: 10px;
   transition: all .2s linear;
+
 
   & a {
     color: #000;
     text-decoration: none;
     text-transform: none !important;
   }
+}
 
-  & p {
-    @include respond-to(handhelds) {
-      margin-bottom: 0px;
-    }
-
-  }
-
-  &:hover {
-    // background-color: $lightgrey;
-    border: 1px solid black;
-    transform: scale(.98);
-    & a {
-      color: #000;
-      text-decoration: none;
-    }
-  }
+.req-has-volunteer {
+  border: 1px solid $limegreen;
+  color: $limegreen;
 }
 
 
