alrighty, I think it's done

--- a/app/assets/stylesheets/opportunities.scss
+++ b/app/assets/stylesheets/opportunities.scss
@@ -108,6 +108,10 @@
 		grid-column: 1;
 	}
 
+  .posts-container {
+    padding-top: 1vh;
+  }
+
 	.posts-container-header {
 		font-size: 1.8rem;
 		text-transform: uppercase;
@@ -126,13 +130,12 @@
 
 		.add-post-btn {
 			font-size: 1.8rem !important;
-			color: $orange !important;
-      padding-left: 3px;
-      padding-right: 3px;
+      color: black !important;
+      padding-left: 2vw;
+      padding-right: 2vw;
 			font-weight: 600;
-      border: 1px solid $orange;
-      background-color: $darkgrey;
-      border-radius: 5px;
+      border: 1px solid $darkgrey;
+      background-color: $limegreen-low;
 
 			@include respond-to(handhelds) {
 				font-size: 1.4rem !important;
@@ -144,6 +147,8 @@
 		max-height: 30vh;
 		overflow-y: scroll;
 	}
+
+
 
 	.post-title {
 	  color: black;
@@ -161,6 +166,17 @@
 	}
 }
 
+.no-posts-container, .no-requirements-container {
+    margin-top: 2vh;
+    margin-left: 2vw;
+    margin-right: 2vw;
+    font-size: 1.1rem;
+
+    @include respond-to(handhelds) {
+      font-size: .9rem;
+    }
+  }
+
 .oppo-main-grid-bottomleft {
 	grid-row: 2;
 	grid-column: 1;
@@ -172,6 +188,11 @@
 
 	.requirements-container {
 		border-top: 1px solid $lightgrey;
+    border-bottom: 1px solid $lightgrey;
+    margin-top: 2vh;
+    padding-top: 1vh;
+    padding-bottom: 3vh;
+    margin-bottom: 2vh;
 	}
 
 	.requirements-container-header {
@@ -191,13 +212,17 @@
 		}
 
 		.add-req-btn {
-			font-size: 1.8rem !important;
-			color: $orange !important;
-			font-weight: 600;
+      font-size: 1.8rem !important;
+      color: black !important;
+      padding-left: 2vw;
+      padding-right: 2vw;
+      font-weight: 600;
+      border: 1px solid $darkgrey;
+      background-color: $limegreen-low;
 
-			@include respond-to(handhelds) {
-				font-size: 1.4rem !important;
-			}
+      @include respond-to(handhelds) {
+        font-size: 1.4rem !important;
+      }
 		}
 	}
 }
@@ -289,7 +314,7 @@
   flex-direction: row;
   justify-content: space-between;
   border: 1px solid $orange;
-  border-radius: 10px;
+  border-radius: 5px;
   transition: all .2s linear;
 
 
@@ -535,20 +560,6 @@
     padding-bottom: 2vh;
   }
 }
-// .opportunity-info-row {
-//   display: flex;
-//   border-radius: 1rem;
-
-//   @include respond-to(handhelds) {
-//     flex-direction: column;
-//   }
-// }
-
-// .opportunity-requirements-tab {
-//   .jbh-grid-container {
-//     grid-template-columns: 50% 50% !important;
-//   }
-// }
 
 .jbh-grid-second {
   text-align: center;
@@ -676,49 +687,9 @@
   }
 }
 
-
-
-
-
-
-// .follower-count {
-//   display: flex;
-//   align-items: center;
-//   font-size: 1.0em;
-//   text-transform: uppercase;
-//   letter-spacing: 2px;
-//   height: 8vh;
-//   margin-right: 25px;
-
-//   @include respond-to(handhelds){
-//     height: 6vh;
-//     margin-right: 0;
-//   };
-// }
-
-// .follower-count-span {
-//   display: flex;
-//   align-items: center;
-//   justify-content: center;
-//   font-size: .8em;
-//   text-transform: uppercase;
-//   letter-spacing: 2px;
-//   margin: 0 .4vw;
-//   padding: 1vh;
-//   background-color: $darkgrey;
-//   min-height: 4vh;
-//   min-width: 4vh;
-//   border-radius: 1rem;
-//   color: #fff;
-
-//   @include respond-to(handhelds){
-//     margin-left: auto;
-//   };
-// }
-
 .post-container {
   padding: 2vh;
-  border-radius: 10px;
+  border-radius: 5px;
   border-bottom: 1px solid #fff;
   background: white;
   transition: all .2s linear;
@@ -789,13 +760,6 @@
 
 // OPPORTUNITIES FORM
 
-
-// .opportunity-creation-form {
-
-//   #select {
-//     text-align: center;
-//   }
-// }
 
 #opportunity_volunteers_required {
   width: 20vw;
